--- a/Checkers/Views/MainWindow.axaml
+++ b/Checkers/Views/MainWindow.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:Checkers.ViewModels"
         Width="500" Height="800"
-        MinWidth="500" MinHeight="800"
+        MinWidth="{Binding MinWidth}" MinHeight="600"
         Padding="20"
         x:Class="Checkers.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
