--- a/Checkers/Views/GameView.axaml
+++ b/Checkers/Views/GameView.axaml
@@ -3,9 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Checkers.ViewModels"
+             xmlns:game="clr-namespace:Checkers.ViewModels.Game"
              mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="700"
              x:Class="Checkers.Views.GameView"
-             x:DataType="viewModels:GameViewModel">
+             x:DataType="game:GameViewModel">
 
     <UserControl.Styles>
         <Style Selector="Button.board-square">
@@ -49,7 +50,7 @@
                             </ItemsControl.ItemsPanel>
 
                             <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="viewModels:Square">
+                                <DataTemplate DataType="game:Square">
                                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
 
                                         <Image Source="{Binding BackgroundImage}" Margin="0"
@@ -69,19 +70,20 @@
                 </Viewbox>
             </Grid>
 
-            <Border Classes="section" Grid.Column="1" Margin="10,10,10,0" IsVisible="{Binding AreHintsEnabled}">
+            <Border Classes="section" Grid.Column="1" Margin="10,10,10,0"
+                    IsVisible="{Binding SettingsData.HintsEnabled}">
                 <Grid RowDefinitions="Auto,Auto,*,Auto,Auto">
                     <TextBlock Grid.Row="0" FontWeight="Bold">LLM Chat</TextBlock>
-                    <TextBlock Grid.Row="1" Text="{Binding HintModelName}" />
+                    <TextBlock Grid.Row="1" Text="{Binding SettingsData.HintModelName}" />
                     <ScrollViewer Grid.Row="2">
-                        <TextBlock Text="{Binding HintText}"
+                        <TextBlock Text="{Binding HintSystemViewModel.Response}"
                                    FontStyle="Italic"
                                    Margin="0,5,0,0"
                                    Foreground="#90000000"
                                    TextWrapping="Wrap" />
                     </ScrollViewer>
-                    <TextBox Grid.Row="3" Text="{Binding QuestionText}" />
-                    <Button Grid.Row="4" Content="Get Hint" Command="{Binding GetHint}" />
+                    <TextBox Grid.Row="3" Text="{Binding HintSystemViewModel.Question}" />
+                    <Button Grid.Row="4" Content="Get Hint" Command="{Binding GetHintCommand}" />
                 </Grid>
             </Border>
         </Grid>
