--- a/Checkers/Views/Settings/SettingsView.axaml
+++ b/Checkers/Views/Settings/SettingsView.axaml
@@ -5,7 +5,7 @@
              xmlns:viewModels="clr-namespace:Checkers.ViewModels"
              xmlns:settings="clr-namespace:Checkers.ViewModels.Settings"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="800"
-             x:Class="Checkers.Views.SettingsView"
+             x:Class="Checkers.Views.Settings.SettingsView"
              x:DataType="settings:SettingsViewModel">
 
     <UserControl.Styles>
