--- a/Checkers/Views/MainMenuView.axaml
+++ b/Checkers/Views/MainMenuView.axaml
@@ -42,11 +42,7 @@
             <Image Source="/Assets/Pieces/RedKing.png" Width="120" Height="120" Margin="0,0,0,30" />
 
             <Button Command="{Binding LoadGame}">
-                PLAY GAME
-            </Button>
-
-            <Button>
-                TUTORIAL
+                PLAY
             </Button>
 
             <Button Command="{Binding LoadSettings}">
