--- a/Checkers/Views/Game/GameView.axaml
+++ b/Checkers/Views/Game/GameView.axaml
@@ -90,8 +90,8 @@
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,10,0,0"
                     HorizontalAlignment="Center">
-            <Button Content="Export Board"
-                    Command="{Binding ExportBoardState}"
+            <Button Content="Play Again"
+                    Command="{Binding LoadGame}"
                     Padding="20,10"
                     CornerRadius="4"
                     Margin="0,0,10,0" />
